--- a/wxsmith/TPedido.wxs
+++ b/wxsmith/TPedido.wxs
@@ -47,6 +47,15 @@
 						<option>1</option>
 					</object>
 					<object class="sizeritem">
+						<object class="wxBitmapButton" name="ID_BITMAPBUTTON3" variable="BotonEliminar" member="yes">
+							<bitmap>C:\proyects\javistore\img\ico-pedidos-delete.png</bitmap>
+							<handler function="OnBotonEliminarClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
 						<object class="wxBitmapButton" name="ID_BITMAPBUTTON2" variable="BotonModificarPedido" member="yes">
 							<bitmap>C:\Proyects\javistore\img\ico-pedido-edit-button.png</bitmap>
 							<handler function="OnBotonModificarPedidoClick" entry="EVT_BUTTON" />
@@ -60,6 +69,11 @@
 				<border>5</border>
 				<option>1</option>
 			</object>
+		</object>
+		<object class="wxMessageDialog" name="ID_MESSAGEDIALOG1" variable="DialogoBorrado" member="yes">
+			<caption>Message</caption>
+			<message></message>
+			<style>wxYES_NO|wxICON_ERROR</style>
 		</object>
 	</object>
 </wxsmith>
