--- a/wxsmith/TProducto1.wxs
+++ b/wxsmith/TProducto1.wxs
@@ -16,7 +16,6 @@
 			<object class="sizeritem">
 				<object class="wxGrid" name="ID_GRID1" variable="GridProductos" member="yes">
 					<cols>6</cols>
-					<rows>5</rows>
 					<defaultcolsize>100</defaultcolsize>
 					<collabels>
 						<item>ID_Producto</item>
@@ -27,6 +26,7 @@
 						<item>Comision</item>
 					</collabels>
 					<style>wxDOUBLE_BORDER|wxTRANSPARENT_WINDOW</style>
+					<handler function="OnGridProductosLabelLeftDClick" entry="EVT_CMD_GRID_LABEL_LEFT_DCLICK" />
 					<handler function="OnGridProductosResize" entry="EVT_SIZE" />
 				</object>
 				<flag>wxALL|wxEXPAND</flag>
@@ -59,10 +59,29 @@
 				<option>1</option>
 			</object>
 			<object class="sizeritem">
-				<object class="wxBoxSizer" variable="BoxSizer1" member="no">
+				<object class="wxBoxSizer" variable="LayerBotones" member="no">
 					<object class="sizeritem">
-						<object class="wxBitmapButton" name="ID_BITMAPBUTTON1" variable="BitmapButton1" member="yes">
+						<object class="wxBitmapButton" name="ID_BITMAPBUTTON1" variable="BotonAgregar" member="yes">
 							<bitmap>C:\Proyects\javistore\img\ico-product-add.png</bitmap>
+							<handler function="OnBotonAgregarClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxBitmapButton" name="ID_BITMAPBUTTON3" variable="BotonEliminar" member="yes">
+							<bitmap>C:\proyects\javistore\img\ico-product-delete.png</bitmap>
+							<handler function="OnBotonEliminarClick" entry="EVT_BUTTON" />
+						</object>
+						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+						<border>5</border>
+						<option>1</option>
+					</object>
+					<object class="sizeritem">
+						<object class="wxBitmapButton" name="ID_BITMAPBUTTON2" variable="BotonEditar" member="yes">
+							<bitmap>C:\proyects\javistore\img\ico-product-edit.png</bitmap>
+							<handler function="OnBotonEditarClick" entry="EVT_BUTTON" />
 						</object>
 						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 						<border>5</border>
@@ -73,6 +92,16 @@
 				<border>5</border>
 				<option>1</option>
 			</object>
+		</object>
+		<object class="wxMessageDialog" name="ID_MESSAGEDIALOG1" variable="DialogoBorrado" member="yes">
+			<caption>Message</caption>
+			<message></message>
+			<style>wxYES_NO|wxICON_ERROR</style>
+		</object>
+		<object class="wxMessageDialog" name="ID_MESSAGEDIALOG2" variable="DialogoError" member="yes">
+			<caption>Message</caption>
+			<message></message>
+			<style>wxOK|wxICON_ERROR</style>
 		</object>
 	</object>
 </wxsmith>
